--- a/index.html
+++ b/index.html
@@ -38,21 +38,37 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
-
+                    <div class="filters">
+                        <form class="bg-dark">
+                            <div class="form-group">
+                                <p>Filter Search</p>
+                                <ul class="bg-dark list-group">
+                                    <li class="bg-dark list-group-item">
+                                        <label for="date">Enter Date</label>
+                                        <input type="text" placeholder="1/10/2010" id="datetime" />
+                                    </li>
+                                    <li class="bg-dark list-group-item">
+                                        <label for="city">Enter City</label>
+                                        <input type="text" placeholder="Roswell" id="city" />
+                                    </li>
+                                    <li class="bg-dark list-group-item">
+                                        <label for="state">Enter State</label>
+                                        <input type="text" placeholder="NM" id="state" />
+                                    </li>
+                                    <li class="bg-dark list-group-item">
+                                        <label for="country">Enter Country</label>
+                                        <input type="text" placeholder="US" id="country" />
+                                    </li>
+                                    <li class="bg-dark list-group-item">
+                                        <label for="shape">Enter UFO Shape</label>
+                                        <input type="text" placeholder="circle" id="shape" />
+                                    </li>
+                                </ul>  
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <div class="col-md-9">
-                    <form class="bg-dark">
-                        <p>Filter Search</p>
-                        <ul class="bg-dark list-group">
-                            <li class="bg-dark list-group-item">
-                                <label for="date">Enter Date</label>
-                                <input type="text" placeholder="1/10/2010" id="datetime" />
-                            </li>
-                            <li class="bg-dark list-group-item">
-                                <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
-                            </li>
-                        </ul>
-                    </form>
                     <table class="table table-striped">
                         <thread>
                             <tr>
