images of filter bar in action

--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                                     </li>
                                     <li class="bg-dark list-group-item">
                                         <label for="city">Enter City</label>
-                                        <input type="text" placeholder="Roswell" id="city" />
+                                        <input type="text" placeholder="roswell" id="city" />
                                     </li>
                                     <li class="bg-dark list-group-item">
                                         <label for="state">Enter State</label>
-                                        <input type="text" placeholder="NM" id="state" />
+                                        <input type="text" placeholder="nm" id="state" />
                                     </li>
                                     <li class="bg-dark list-group-item">
                                         <label for="country">Enter Country</label>
-                                        <input type="text" placeholder="US" id="country" />
+                                        <input type="text" placeholder="us" id="country" />
                                     </li>
                                     <li class="bg-dark list-group-item">
                                         <label for="shape">Enter UFO Shape</label>
